--- a/SARS/AvatarSystem.resx
+++ b/SARS/AvatarSystem.resx
@@ -1231,7 +1231,7 @@
     <value>Picture</value>
   </data>
   <data name="picture.Width" type="System.Int32, mscorlib">
-    <value>258</value>
+    <value>120</value>
   </data>
   <metadata name="AvatarName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -1297,7 +1297,7 @@
     <value>Vertical</value>
   </data>
   <data name="avatarGrid.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 440</value>
+    <value>840, 431</value>
   </data>
   <data name="avatarGrid.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -1427,7 +1427,7 @@
     <value>2</value>
   </data>
   <data name="groupBox7.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 314</value>
+    <value>9, 311</value>
   </data>
   <data name="groupBox7.Size" type="System.Drawing.Size, System.Drawing">
     <value>797, 120</value>
@@ -2147,10 +2147,10 @@
     <value>6</value>
   </data>
   <data name="metroTabPage2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage2.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -2549,10 +2549,10 @@
     <value>14</value>
   </data>
   <data name="metroTabPage4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage4.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -2690,10 +2690,10 @@
     <value>NoControl</value>
   </data>
   <data name="resource.Location7" type="System.Drawing.Point, System.Drawing">
-    <value>434, 1</value>
+    <value>438, 2</value>
   </data>
   <data name="resource.Size7" type="System.Drawing.Size, System.Drawing">
-    <value>399, 399</value>
+    <value>393, 393</value>
   </data>
   <data name="resource.TabIndex7" type="System.Int32, mscorlib">
     <value>1</value>
@@ -2705,7 +2705,7 @@
     <value>3, 39</value>
   </data>
   <data name="txtAbout.Size" type="System.Drawing.Size, System.Drawing">
-    <value>834, 401</value>
+    <value>834, 398</value>
   </data>
   <data name="txtAbout.TabIndex" type="System.Int32, mscorlib">
     <value>57</value>
@@ -2777,10 +2777,10 @@
     <value>8</value>
   </data>
   <data name="metroTabPage3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage3.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -2810,7 +2810,7 @@
     <value>20, 20</value>
   </data>
   <data name="faq.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="faq.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -2828,10 +2828,10 @@
     <value>2</value>
   </data>
   <data name="metroTabPage5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage5.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -2851,65 +2851,11 @@
   <data name="&gt;&gt;metroTabPage5.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
-  <data name="btnParseImages.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Right</value>
-  </data>
-  <data name="btnParseImages.Location" type="System.Drawing.Point, System.Drawing">
-    <value>247, 396</value>
-  </data>
-  <data name="btnParseImages.Size" type="System.Drawing.Size, System.Drawing">
-    <value>283, 35</value>
-  </data>
-  <data name="btnParseImages.TabIndex" type="System.Int32, mscorlib">
-    <value>81</value>
-  </data>
-  <data name="btnParseImages.Text" xml:space="preserve">
-    <value>Try get names &amp;&amp; images &amp;&amp; upload to API</value>
-  </data>
-  <data name="&gt;&gt;btnParseImages.Name" xml:space="preserve">
-    <value>btnParseImages</value>
-  </data>
-  <data name="&gt;&gt;btnParseImages.Type" xml:space="preserve">
-    <value>MetroFramework.Controls.MetroButton, MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a</value>
-  </data>
-  <data name="&gt;&gt;btnParseImages.Parent" xml:space="preserve">
-    <value>btnScanCache</value>
-  </data>
-  <data name="&gt;&gt;btnParseImages.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="btnLoadResults.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Bottom, Right</value>
-  </data>
-  <data name="btnLoadResults.Location" type="System.Drawing.Point, System.Drawing">
-    <value>536, 396</value>
-  </data>
-  <data name="btnLoadResults.Size" type="System.Drawing.Size, System.Drawing">
-    <value>175, 35</value>
-  </data>
-  <data name="btnLoadResults.TabIndex" type="System.Int32, mscorlib">
-    <value>80</value>
-  </data>
-  <data name="btnLoadResults.Text" xml:space="preserve">
-    <value>Load Results into Avatars</value>
-  </data>
-  <data name="&gt;&gt;btnLoadResults.Name" xml:space="preserve">
-    <value>btnLoadResults</value>
-  </data>
-  <data name="&gt;&gt;btnLoadResults.Type" xml:space="preserve">
-    <value>MetroFramework.Controls.MetroButton, MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a</value>
-  </data>
-  <data name="&gt;&gt;btnLoadResults.Parent" xml:space="preserve">
-    <value>btnScanCache</value>
-  </data>
-  <data name="&gt;&gt;btnLoadResults.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
   <data name="btnScanCacheFolder.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
   </data>
   <data name="btnScanCacheFolder.Location" type="System.Drawing.Point, System.Drawing">
-    <value>717, 396</value>
+    <value>717, 393</value>
   </data>
   <data name="btnScanCacheFolder.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 35</value>
@@ -2919,6 +2865,9 @@
   </data>
   <data name="btnScanCacheFolder.Text" xml:space="preserve">
     <value>Scan Cache</value>
+  </data>
+  <data name="btnScanCacheFolder.ToolTip" xml:space="preserve">
+    <value>Scan the avatar cache and uploads data to API if able to grab from VRChat API</value>
   </data>
   <data name="&gt;&gt;btnScanCacheFolder.Name" xml:space="preserve">
     <value>btnScanCacheFolder</value>
@@ -2930,7 +2879,7 @@
     <value>btnScanCache</value>
   </data>
   <data name="&gt;&gt;btnScanCacheFolder.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>2</value>
   </data>
   <data name="txtCacheScannerLog.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
@@ -2942,7 +2891,7 @@
     <value>NoControl</value>
   </data>
   <data name="resource.Location8" type="System.Drawing.Point, System.Drawing">
-    <value>461, 2</value>
+    <value>463, 1</value>
   </data>
   <data name="resource.Size8" type="System.Drawing.Size, System.Drawing">
     <value>373, 373</value>
@@ -2957,7 +2906,7 @@
     <value>3, 12</value>
   </data>
   <data name="txtCacheScannerLog.Size" type="System.Drawing.Size, System.Drawing">
-    <value>837, 378</value>
+    <value>837, 375</value>
   </data>
   <data name="txtCacheScannerLog.TabIndex" type="System.Int32, mscorlib">
     <value>69</value>
@@ -2972,13 +2921,13 @@
     <value>btnScanCache</value>
   </data>
   <data name="&gt;&gt;txtCacheScannerLog.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>3</value>
   </data>
   <data name="btnScanCache.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="btnScanCache.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="btnScanCache.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -3482,10 +3431,10 @@
     <value>3</value>
   </data>
   <data name="metroTabPage6.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage6.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
