--- a/SARS/AvatarSystem.resx
+++ b/SARS/AvatarSystem.resx
@@ -1270,7 +1270,7 @@
     <value>Vertical</value>
   </data>
   <data name="avatarGrid.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 432</value>
+    <value>840, 426</value>
   </data>
   <data name="avatarGrid.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -1400,7 +1400,7 @@
     <value>2</value>
   </data>
   <data name="groupBox7.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 312</value>
+    <value>9, 309</value>
   </data>
   <data name="groupBox7.Size" type="System.Drawing.Size, System.Drawing">
     <value>797, 120</value>
@@ -2120,10 +2120,10 @@
     <value>6</value>
   </data>
   <data name="metroTabPage2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage2.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -2522,10 +2522,10 @@
     <value>14</value>
   </data>
   <data name="metroTabPage4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage4.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -2663,10 +2663,10 @@
     <value>NoControl</value>
   </data>
   <data name="resource.Location7" type="System.Drawing.Point, System.Drawing">
-    <value>436, 1</value>
+    <value>440, 2</value>
   </data>
   <data name="resource.Size7" type="System.Drawing.Size, System.Drawing">
-    <value>397, 397</value>
+    <value>391, 391</value>
   </data>
   <data name="resource.TabIndex7" type="System.Int32, mscorlib">
     <value>1</value>
@@ -2678,7 +2678,7 @@
     <value>3, 39</value>
   </data>
   <data name="txtAbout.Size" type="System.Drawing.Size, System.Drawing">
-    <value>834, 399</value>
+    <value>834, 396</value>
   </data>
   <data name="txtAbout.TabIndex" type="System.Int32, mscorlib">
     <value>57</value>
@@ -2750,10 +2750,10 @@
     <value>8</value>
   </data>
   <data name="metroTabPage3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage3.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -2783,7 +2783,7 @@
     <value>20, 20</value>
   </data>
   <data name="faq.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="faq.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -2801,10 +2801,10 @@
     <value>2</value>
   </data>
   <data name="metroTabPage5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage5.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -2824,11 +2824,41 @@
   <data name="&gt;&gt;metroTabPage5.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
+  <data name="btnGetScreenshots.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Bottom, Right</value>
+  </data>
+  <data name="btnGetScreenshots.Location" type="System.Drawing.Point, System.Drawing">
+    <value>591, 388</value>
+  </data>
+  <data name="btnGetScreenshots.Size" type="System.Drawing.Size, System.Drawing">
+    <value>120, 35</value>
+  </data>
+  <data name="btnGetScreenshots.TabIndex" type="System.Int32, mscorlib">
+    <value>80</value>
+  </data>
+  <data name="btnGetScreenshots.Text" xml:space="preserve">
+    <value>Take Pictures</value>
+  </data>
+  <data name="btnGetScreenshots.ToolTip" xml:space="preserve">
+    <value>Take Pictures of unknown avatars</value>
+  </data>
+  <data name="&gt;&gt;btnGetScreenshots.Name" xml:space="preserve">
+    <value>btnGetScreenshots</value>
+  </data>
+  <data name="&gt;&gt;btnGetScreenshots.Type" xml:space="preserve">
+    <value>MetroFramework.Controls.MetroButton, MetroFramework, Version=1.4.0.0, Culture=neutral, PublicKeyToken=5f91a84759bf584a</value>
+  </data>
+  <data name="&gt;&gt;btnGetScreenshots.Parent" xml:space="preserve">
+    <value>btnScanCache</value>
+  </data>
+  <data name="&gt;&gt;btnGetScreenshots.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="btnScanCacheFolder.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
   </data>
   <data name="btnScanCacheFolder.Location" type="System.Drawing.Point, System.Drawing">
-    <value>717, 394</value>
+    <value>717, 388</value>
   </data>
   <data name="btnScanCacheFolder.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 35</value>
@@ -2852,7 +2882,7 @@
     <value>btnScanCache</value>
   </data>
   <data name="&gt;&gt;btnScanCacheFolder.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="txtCacheScannerLog.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
@@ -2864,10 +2894,10 @@
     <value>NoControl</value>
   </data>
   <data name="resource.Location8" type="System.Drawing.Point, System.Drawing">
-    <value>463, 2</value>
+    <value>469, 2</value>
   </data>
   <data name="resource.Size8" type="System.Drawing.Size, System.Drawing">
-    <value>371, 371</value>
+    <value>365, 365</value>
   </data>
   <data name="resource.TabIndex8" type="System.Int32, mscorlib">
     <value>1</value>
@@ -2879,7 +2909,7 @@
     <value>3, 12</value>
   </data>
   <data name="txtCacheScannerLog.Size" type="System.Drawing.Size, System.Drawing">
-    <value>837, 376</value>
+    <value>837, 370</value>
   </data>
   <data name="txtCacheScannerLog.TabIndex" type="System.Int32, mscorlib">
     <value>69</value>
@@ -2894,7 +2924,7 @@
     <value>btnScanCache</value>
   </data>
   <data name="&gt;&gt;txtCacheScannerLog.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
   <data name="btnScanCache.Location" type="System.Drawing.Point, System.Drawing">
     <value>4, 38</value>
@@ -3404,10 +3434,10 @@
     <value>3</value>
   </data>
   <data name="metroTabPage6.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 38</value>
+    <value>4, 35</value>
   </data>
   <data name="metroTabPage6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>840, 444</value>
+    <value>840, 447</value>
   </data>
   <data name="metroTabPage6.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
